tests/snapshots/run_file__scopeless_discard.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/scopeless_discard.bend
---
NumScott:
{2 *}

Scott:
{2 *}
