tests/snapshots/run_file__scopeless_discard.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/scopeless_discard.hvm
---
Lazy mode:
(2, *)

Strict mode:
(2, *)
