tests/snapshots/run_file__str_backtick.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/str_backtick.hvm
---
Lazy mode:
"abc369*`asdf\"asdf"

Strict mode:
"abc369*`asdf\"asdf"
