tests/snapshots/run_file__str_concat.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/str_concat.bend
---
NumScott:
"hello world"

Scott:
"hello world"
