tests/snapshots/run_file__str_inc.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/str_inc.bend
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/run_file/str_inc.bend :
[1m- expected:[0m ')'
[1m- detected:[0m
[0m  3 | (StrGo 0 str) [4m[31m=[0m str[0m
