tests/snapshots/run_file__str_inc_eta.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/str_inc_eta.hvm
---
Lazy mode:
(11, #str λa (105, (102, (109, (109, (112, (33, (120, (112, (115, (109, (101, a))))))))))))

Strict mode:
(11, #str λa (105, (102, (109, (109, (112, (33, (120, (112, (115, (109, (101, a))))))))))))
