tests/snapshots/run_file__str_len.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/str_len.bend
---
NumScott:
4

Scott:
4
